# zen-vm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  instructions.h
header/: global_value.h  instruction_list.h  interrupt_list.h
instructions/: control.c  file.c  gui.c  logic.c  prog.c  sys.c  system.c
source/: main.c
source/instructions/: arithmetic.c  cons.c  control.c  file.c  logic.c  net.c  prog.c  sys.c  system.c  transfer.c
source/interrupts/: io.c  system.c
src/: main.c  zenvm.h
src/instructions/: arithmetic.c  cons.c  net.c  transfer.c
